Decimal::toString should not round integer value. https://bugs.webkit.org/show_bug.cgi?id=91481

Reviewed by Kent Tamura.

Source/WebCore:

This patch makes Decimal::toString not to round an integer value
before converting string.

Tests: WebKit/chromium/tests/DecimalTest.cpp: DecimalTest.toString

* platform/Decimal.cpp:
(WebCore::Decimal::toString): When the value is an integer, we don't
round coefficient to be DBL_DIG(15) digits because double can
represent an integer without rounding error.

Source/WebKit/chromium:

This patch adds a new test cases for Decimal::toString() for failed
value and maximum coefficient value with various exponent.

* tests/DecimalTest.cpp:
(TEST_F): DecimalTest.toString: Add test cases for big coefficient values.

Canonical link: https://commits.webkit.org/109386@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@122928 268f45cc-cd09-0410-ab3c-d52691b4dbfc